--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'org.parceler:parceler-api:1.0.4'
     compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.0.2'
+
+
 }
