--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.loopj.android:android-async-http:1.4.9'
-    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'org.parceler:parceler-api:1.0.4'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:appcompat-v7:23.0.2'
-
-
+    compile 'com.github.bumptech.glide:glide:3.5.2'
 }
